white space fix and added navigation

--- a/style.css
+++ b/style.css
@@ -345,6 +345,15 @@ Finished with using the normalize feature
 */
 
 body{
-  background-image: url("media/pattern.jpg");
-  background-repeat: x y;
+	background-image: url("media/pattern.jpg");
+	background-repeat: x y;
 }
+
+.navigation{
+	list-style-type: none;
+	margin: 0;
+	padding: 0;
+	overflow: hidden;
+	background-color: #dddddd;
+}
+
